finished layout by 70%

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
             </section>
 
-             <section class="assortment assortment__sale">
+            <section class="assortment assortment__sale">
                 <div class="container">
                     <h2 class="assortment__title assortment__title-sale">Распродажа</h2>
 
@@ -147,6 +147,88 @@
                     </div>
                 </div>
             </div>
+
+            <section class="assortment assortment__sport">
+                <div class="container">
+                    <h2 class="assortment__title assortment__title-sport">Спорт</h2>
+
+                    <div class="assortment__slick-sport">
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-sport" src="img/nike.png" alt="Мужские шорты"></a>
+                            <div class="assortment__text assortment__text-sport">
+                                <p class="assortment-slider__name">Nike</p>
+                                <p class="assortment-slider__designation">Мужские шорты</p>
+                                <p class="assortment-slider__price">От 1 990 ₽</p>
+                            </div>
+                        </div>
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-sport" src="img/NikeHeritage86.png" alt="Детская бейсболка "></a>
+                            <div class="assortment__text assortment__text-sport">
+                                <p class="assortment-slider__name">Nike</p>
+                                <p class="assortment-slider__designation">Мужские шорты</p>
+                                <p class="assortment-slider__price">От 1 990 ₽</p>
+                            </div>
+                        </div>
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-sport" src="img/NikeCrossover.png" alt="Мужской комплект"></a>
+                            <div class="assortment__text assortment__text-sport">
+                                <p class="assortment-slider__name">Nike Crossover</p>
+                                <p class="assortment-slider__designation">Мужской комплект</p>
+                                <p class="assortment-slider__price">От 4990р.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="assortment assortment__winter">
+                <div class="container">
+                    <h2 class="assortment__title assortment__title-winter">Зимний ассортимент</h2>
+
+                    <div class="assortment__slick-winter">
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-winter" src="img/NikeSportswearThermaFITCitySeries.png" alt="Женская парка"></a>
+                            <div class="assortment__text assortment__text-winter">
+                                <p class="assortment-slider__name">Nike Sportswear Therma-FIT City Series</p>
+                                <p class="assortment-slider__designation">Женская парка</p>
+                                <p class="assortment-slider__price">21 799 ₽</p>
+                            </div>
+                        </div>
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-winter" src="img/NikeThermaFIT.png" alt="Женская беговая куртка"></a>
+                            <div class="assortment__text assortment__text-winter">
+                                <p class="assortment-slider__name">Nike Therma-FIT</p>
+                                <p class="assortment-slider__designation">Женская беговая куртка</p>
+                                <p class="assortment-slider__price">21 799 ₽</p>
+                            </div>
+                        </div>
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-winter" src="img/NikeSportswearThermaFITCitySeries.png" alt="Женская парка"></a>
+                            <div class="assortment__text assortment__text-winter">
+                                <p class="assortment-slider__name">Nike Sportswear Therma-FIT City Series</p>
+                                <p class="assortment-slider__designation">Женская парка</p>
+                                <p class="assortment-slider__price">21 799 ₽</p>
+                            </div>
+                        </div>
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-winter" src="img/NikeThermaFIT.png" alt="Женская беговая куртка"></a>
+                            <div class="assortment__text assortment__text-winter">
+                                <p class="assortment-slider__name">Nike Therma-FIT</p>
+                                <p class="assortment-slider__designation">Женская беговая куртка</p>
+                                <p class="assortment-slider__price">21 799 ₽</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div class="nike-club container">
+                <div class="nike-club__bg">
+                    <h3 class="nike-club__title">Присоединяся в Nike Клуб</h3>
+                    <p class="nike-club__subtitle">Давая с нами в футбольную команду!</p>
+                    <a class="nike-club__link" href="#">Начать</a>
+                </div>
+            </div>
         </main>
 
         <footer class="footer">
@@ -157,5 +239,8 @@
     <script src="js/jquery.min.js"></script>
     <script src="slick/slick.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        
+    </script>
 </body>
 </html>
