Completed assortment__categories. Started to typeset footer

--- a/index.html
+++ b/index.html
@@ -229,10 +229,103 @@
                     <a class="nike-club__link" href="#">Начать</a>
                 </div>
             </div>
+
+            <section class="assortment assortment__categories">
+                <div class="container">
+                    <h2 class="assortment__title assortment__title-categories">Категории</h2>
+
+                    <div class="assortment__slick-categories">
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-categories" src="img/categories-man.png" alt="Категории Мужчины"></a>
+                            <div class="assortment__link">
+                                <a href="#">Мужчины</a>
+                            </div>
+                        </div>
+
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-categories" src="img/women-bg.png" alt="Категории Женщины"></a>
+                            <div class="assortment__link">
+                                <a href="#">Женщины</a>
+                            </div>
+                        </div>
+
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-categories" src="img/сhildren-bg.png" alt="Категории Дети"></a>
+                            <div class="assortment__link">
+                                <a href="#">Дети</a>
+                            </div>
+                        </div>
+
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-categories" src="img/categories-man.png" alt="Категории Мужчины"></a>
+                            <div class="assortment__link">
+                                <a href="#">Мужчины</a>
+                            </div>
+                        </div>
+
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-categories" src="img/women-bg.png" alt="Категории Женщины"></a>
+                            <div class="assortment__link">
+                                <a href="#">Женщины</a>
+                            </div>
+                        </div>
+
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-categories" src="img/сhildren-bg.png" alt="Категории Дети"></a>
+                            <div class="assortment__link">
+                                <a href="#">Дети</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="footer">
+            <div class="footer-container">
+                <div class="footer__row">
+                    <div class="footer__row-list">
+                        <ul class="footer__list list-reset">
+                            <li class="footer__item-title"><h3>Помощь</h3></li>
+                            <li class="footer__item"><a href="#" class="footer__item-link">Вопросы</a></li>
+                            <li class="footer__item"><a href="#" class="footer__item-link">Связаться с нами</a></li>
+                            <li class="footer__item"><a href="#" class="footer__item-link">Доставка</a></li>
+                        </ul>
 
+                        <ul class="footer__list list-reset">
+                            <li class="footer__item-title"><h3>Компания</h3></li>
+                            <li class="footer__item"><a href="#" class="footer__item-link">Новости</a></li>
+                            <li class="footer__item"><a href="#" class="footer__item-link">Блог</a></li>
+                            <li class="footer__item"><a href="#" class="footer__item-link">Сообщество</a></li>
+                        </ul>
+                    </div>
+
+                    <ul class="social-networks-list list-reset">
+                        <li class="social-networks-item">
+                            <a href="#"><span class="google-play"></span></a>
+                        </li>
+                        <li class="social-networks-item">
+                            <a href="#"><span class="youtube"></span></a>
+                        </li>
+                        <li class="social-networks-item">
+                            <a href="#"><span class="facebook"></span></a>
+                        </li>
+                    </ul>
+                </div>
+
+                
+
+                <div class="bottom-inf">
+                    <p class="bottom-inf__text">© Nike, Inc., 2021. Все права защищены.</p>
+
+                    <ul class="bottom-inf__list list-reset">
+                        <li class="bottom-inf__item"><a href="#">Конфиденциальность</a></li>
+                        <li class="bottom-inf__item"><a href="#">О компании</a></li>
+                        <li class="bottom-inf__item"><a href="#">Отзывы</a></li>
+                        <li class="bottom-inf__item"><a href="#">Каталог</a></li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </div>
 
