hamburger bug fix

--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@
                                 <p class="assortment-slider__price">От 7 990 ₽</p>
                             </div>
                         </div>
+
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-sale" src="img/NikeCourtDri-FITVictory.png" alt="Мужской комплект Nike CourtDri-FIT Victory"></a>
+                            <div class="assortment__text">
+                                <p class="assortment-slider__name">NikeCourt Dri-FIT Victory</p>
+                                <p class="assortment-slider__designation">Мужской комплект</p>
+                                <p class="assortment-slider__price">2 499 ₽</p>
+                            </div>
+                        </div>
+
+                        <div class="assortment-slider">
+                            <a href="#"><img class="assortment-slider__img assortment-slider__img-sale" src="img/NikeCourtDriFIT.png" alt="Женский комплект NikeCourt Dri-FIT"></a>
+                            <div class="assortment__text">
+                                <p class="assortment-slider__name">NikeCourt Dri-FIT</p>
+                                <p class="assortment-slider__designation">Женский комплект</p>
+                                <p class="assortment-slider__price">От 7 990 ₽</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
