--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="svg/logo.svg" type="img/x-icon">
     <title>Nike Clothing Store</title>
 
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/optimizer.css">
+
+    <!-- Файл для редактирование css
     <link rel="stylesheet" href="css/main.css">
+    -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -351,7 +356,11 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="slick/slick.min.js"></script>
+    <script src="js/jscompress.js"></script>
+
+    <!-- Файл для редактирование js
     <script src="js/script.js"></script>
+    -->
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
