--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Nike Clothing Store</title>
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/optimizer.css">
-
     <!-- Файл для редактирование css
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/optimizer.css">
     -->
+    
+    <link rel="stylesheet" href="css/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,11 +56,11 @@
         <main class="contant"> 
             <div class="hero">
                 <div class="container"> 
-                    <div class="account-registration" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-duration="1000">
+                    <div class="account-registration" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-duration="600">
                         <p>Еще нет аккаунта? <a href="#">Зарегистрироваться</a></p>
                     </div>
 
-                    <section class="fitness" data-aos="fade-left" data-aos-duration="1000">
+                    <section class="fitness" data-aos="fade-left" data-aos-duration="600">
                         <h2 class="fitness__title">Занимайтесь фитнесом вместе с нами</h2>
 
                         <div class="fitness__link">
@@ -73,7 +73,7 @@
                         <h2 class="discounts__title">Скидки</h2>
                         <p class="discounts__subtitle">На куртки, ветровки и мн. др.</p>
 
-                        <div class="discounts__link" data-aos="fade-down" data-aos-duration="1000">
+                        <div class="discounts__link" data-aos="fade-down" data-aos-duration="600" data-aos-offset="80">
                             <a href="#">Позже</a>
                             <a href="#">Смотреть</a>
                         </div>
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <section class="assortment assortment__gaining-momentum" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+            <section class="assortment assortment__gaining-momentum" data-aos="fade-right" data-aos-duration="600" data-aos-offset="80" data-aos-easing="ease-in-sine">
                 <div class="container">
                     <h2 class="assortment__title assortment__title-gaining-momentum">Набирает обороты</h2>
 
@@ -118,7 +118,7 @@
                 </div>
             </section>
 
-            <section class="assortment assortment__sale" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+            <section class="assortment assortment__sale" data-aos="fade-left" data-aos-duration="600" data-aos-offset="80" data-aos-easing="ease-in-sine">
                 <div class="container">
                     <h2 class="assortment__title assortment__title-sale">Распродажа</h2>
 
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <section class="assortment assortment__sport" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+            <section class="assortment assortment__sport" data-aos="fade-right" data-aos-duration="600" data-aos-offset="80" data-aos-easing="ease-in-sine">
                 <div class="container">
                     <h2 class="assortment__title assortment__title-sport">Спорт</h2>
 
@@ -206,7 +206,7 @@
                 </div>
             </section>
 
-            <section class="assortment assortment__winter" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+            <section class="assortment assortment__winter" data-aos="fade-left" data-aos-duration="600" data-aos-offset="80" data-aos-easing="ease-in-sine">
                 <div class="container">
                     <h2 class="assortment__title assortment__title-winter">Зимний ассортимент</h2>
 
@@ -247,7 +247,7 @@
                 </div>
             </section>
 
-            <div class="nike-club container" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+            <div class="nike-club container" data-aos="fade-right" data-aos-duration="600" data-aos-offset="80" data-aos-easing="ease-in-sine" >
                 <div class="nike-club__bg">
                     <h3 class="nike-club__title">Присоединяся в Nike Клуб</h3>
                     <p class="nike-club__subtitle">Давая с нами в футбольную команду!</p>
@@ -255,7 +255,7 @@
                 </div>
             </div>
 
-            <section class="assortment assortment__categories" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+            <section class="assortment assortment__categories" data-aos="fade-left" data-aos-duration="600" data-aos-offset="80" data-aos-easing="ease-in-sine">
                 <div class="container">
                     <h2 class="assortment__title assortment__title-categories">Категории</h2>
 
@@ -306,7 +306,7 @@
             </section>
         </main>
 
-        <footer class="footer" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+        <footer class="footer" data-aos="fade-right" data-aos-duration="600" data-aos-offset="80" data-aos-easing="ease-in-sine">
             <div class="footer-container">
                 <div class="footer__row">
                     <div class="footer__row-list">
